--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,13 @@
   "name": "tasklist",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.3.5",
     "angular": "~1.4.3",
     "angular-new-router": "~0.5.3",
     "angular-resource": "~1.4.3",
     "firebase": "~2.3.2",
-    "angularfire": "~1.1.3"
+    "angularfire": "~1.1.3",
+    "bootstrap": "~3.3.6",
+    "bootstrap-toggle": "~2.2.1"
   },
   "overrides": {
     "angular-new-router": {
