--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "angular-resource": "~1.4.3",
     "firebase": "~2.3.2",
     "angularfire": "~1.1.3",
-    "bootstrap": "~3.3.6",
-    "bootstrap-toggle": "~2.2.1"
+    "bootstrap": "~3.3.6"
   },
   "overrides": {
     "angular-new-router": {
